--- a/handlers/index.html
+++ b/handlers/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Emberlyn D’Sanctus</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Playfair+Display&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://emberlyn.onrender.com/favicon.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
